<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/pic_iv"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/full_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"/>

        <Button
            android:id="@+id/sms_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms"/>

        <Button
            android:id="@+id/mail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/phone_number_label"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent" />


    <TextView
        android:id="@+id/phone_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail_label"
            android:layout_marginLeft="20dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/mail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:textAppearanceMedium" />


</LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="25dp"
        android:src="@drawable/edit_img" />
    </RelativeLayout>